# ChessGame001

./: CMakeLists.txt
Include/My_lib/: Bishop.hpp  Figure.hpp  Game.hpp  Kdtree.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  ResourceHolder.hpp  ResourceIdentifiers.hpp  Rook.hpp  World.hpp
Source/: Bishop.cpp  CmakeLists.txt  Figure.cpp  Game.cpp  Kdtree.cpp  King.cpp  Knight.cpp  Main.cpp  Pawn.cpp  Queen.cpp  Rook.cpp  Tests.cpp  World.cpp
doc/html/: _bishop_8hpp_source.html  _figure_8hpp_source.html  _game_8hpp_source.html  _kdtree_8hpp_source.html  _king_8hpp_source.html  _knight_8hpp_source.html  _pawn_8hpp_source.html  _queen_8hpp_source.html  _resource_holder_8hpp_source.html  _resource_holder_8inl_source.html  _resource_identifiers_8hpp_source.html  _rook_8hpp_source.html  _world_8hpp_source.html  annotated.html  annotated_dup.js  class_bishop-members.html  class_bishop.html  class_bishop.js  class_figure-members.html  class_figure.html  class_game-members.html  class_game.html  class_game.js  class_kdtree-members.html  class_kdtree.html  class_kdtree.js  class_king-members.html  class_king.html  class_king.js  class_knight-members.html  class_knight.html  class_knight.js  class_pawn-members.html  class_pawn.html  class_pawn.js  class_queen-members.html  class_queen.html  class_queen.js  class_resource_holder-members.html  class_resource_holder.html  (+25 more)
doc/latex/: _bishop_8hpp_source.tex  _figure_8hpp_source.tex  _game_8hpp_source.tex  _kdtree_8hpp_source.tex  _king_8hpp_source.tex  _knight_8hpp_source.tex  _pawn_8hpp_source.tex  _queen_8hpp_source.tex  (+30 more)
(+47 files in other folders)
