# CMakeList.txt: проект CMake для ChessGame001; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)


# Включение горячей перезагрузки для компиляторов MSVC, если поддерживается.

project ("ChessGame")

# Добавьте источник в исполняемый файл этого проекта.
add_subdirectory ("Source")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
